[package]
name = "center-window"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
